--- a/index.html
+++ b/index.html
@@ -11,16 +11,15 @@
     <div class="container">
       <div class="forms-wrapper">
         <form action="signin-form">
-          <a href="#" class="signin-btn">Sign Up</a>
+          <a href="#" class="signup-btn">Sign Up</a>
           <h2>Sign In</h2>
           <div class="input-wrapper">
-            <input type="email" placeholder="Your email" />
-            <input type="password" placeholder="Your password" />
+            <input type="text" placeholder="Your email" />
+            <input type="password" placeholder="Password" />
             <input type="submit" value="Sign in" />
           </div>
         </form>
-        <br />
-        <!-- <form action="signup-form">
+        <form action="signup-form">
           <a href="#" class="signin-btn">Sign In</a>
           <h2>Sign Up</h2>
           <div class="input-wrapper">
@@ -30,7 +29,7 @@
             <input type="password" value="Confirm Password" />
             <input type="submit" value="Sign Up" />
           </div>
-        </form> -->
+        </form>
       </div>
     </div>
 
